--- a/news_project/news_app/templates/base.html
+++ b/news_project/news_app/templates/base.html
@@ -6,14 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title%}{% endblock %}</title>
-    <link rel="stylesheet" href="../static/index.css">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
         <div class="container">
             <div class="row">
-                <a href="#" class="logo">Logo</a>
+                <a href="{% url 'home_page' %}" class="logo">Logo</a>
                 <ul class="header-nav">
                     <li class="content-nav"><a href="{% url 'home_page' %}" class="nav-link">Home</a></li>
                     <li class="content-nav"><a href="{% url 'news_page' %}" target="_blank" class="nav-link">News</a></li>
